test/Fail/Issue2650.err
Issue2650.agda:16.14-18: error: [UnequalTerms]
a != b of type A
when checking that the expression refl has type _10 i ≡ b
